# BytePort

./: .gitignore  .golangci.yml  .goreleaser.yml  .health-dashboard.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .qgate.toml  ADR.md  AGENTS.md  ARCHITECTURE.md  BRANCH_TRIAGE_DONE.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  RATCHETS.md  README-Windows.md  README.md  SECURITY.md  SPEC.md  SPECS_INDEX.md  STATUS.md  Taskfile.yml  analytics.ts  chat-app-deployment.yml  chat-app-proxy-deployment.yml  codecov.yml  deny.toml  gitleaks.toml  go.mod  justfile  lefthook.yml  mise.toml  nginx-chat.conf  nginx-universal.conf  package-lock.json  package.json  sentry.config.ts  (+18 more)
backend/nvms/: Cargo.toml  go.mod  go.sum  log.txt  main-simple.go  main.go  spin.toml
backend/nvms/.history/: Cargo_20241129183731.toml  spin_20241129202600.toml  spin_20241129202603.toml  spin_20241129202630.toml
backend/nvms/.history/src/: lib_20241129194320.rs  lib_20241129194427.rs  lib_20241129194433.rs  lib_20241129194435.rs  lib_20241129194445.rs  lib_20241129194452.rs  lib_20241129194454.rs  lib_20241129194456.rs  lib_20241129194502.rs  lib_20241129194737.rs  lib_20241129194740.rs  lib_20241129195341.rs  lib_20241129195350.rs  lib_20241129195353.rs  lib_20241129195358.rs  lib_20241129195401.rs  lib_20241129195424.rs  lib_20241129195427.rs  lib_20241129195431.rs  lib_20241129195436.rs  lib_20241129195443.rs  lib_20241129195448.rs  lib_20241129195453.rs  lib_20241129195456.rs  lib_20241129195506.rs  lib_20241129195509.rs  lib_20241129195514.rs  lib_20241129195517.rs  lib_20241129195520.rs  lib_20241129195528.rs  lib_20241129195533.rs  lib_20241129195605.rs  lib_20241129195612.rs  lib_20241129195857.rs  lib_20241129195906.rs  lib_20241129195910.rs  lib_20241129195920.rs  lib_20241129195932.rs  lib_20241129200043.rs  lib_20241129200133.rs  (+54 more)
backend/nvms/.history/src/lib/: mod_20241129194058.rs  mod_20241129194248.rs  mod_20241129194326.rs  mod_20241129194338.rs  mod_20241129194359.rs  mod_20241129194609.rs  mod_20241129194651.rs  mod_20241129194655.rs  nvms_20241129194344.rs  nvms_20241129194509.rs  nvms_20241129194512.rs  nvms_20241129194516.rs  nvms_20241129194521.rs  nvms_20241129194533.rs
backend/nvms/.history/src/parser/: parse_20241129194825.rs  parse_20241129194831.rs  parse_20241129194834.rs  parse_20241129194839.rs  parse_20241129194842.rs  parse_20241129194847.rs  parse_20241129194853.rs  parse_20241129194900.rs  parse_20241129194903.rs  parse_20241129194905.rs  parse_20241129194908.rs  parse_20241129194910.rs  parse_20241129194921.rs  parse_20241129194923.rs  parse_20241129194929.rs  parse_20241129194936.rs  parse_20241129194939.rs  parse_20241129194944.rs  parse_20241129194947.rs  parse_20241129194950.rs  parse_20241129194953.rs  parse_20241129194958.rs  parse_20241129195003.rs  parse_20241129195006.rs  parse_20241129195035.rs  parse_20241129195056.rs  parse_20241129195101.rs  parse_20241129195107.rs  parse_20241129195110.rs  parse_20241129195114.rs  parse_20241129195123.rs  parse_20241129195128.rs  parse_20241129195132.rs  parse_20241129195136.rs  parse_20241129195158.rs  parse_20241129195206.rs  parse_20241129195209.rs  parse_20241129195211.rs  parse_20241129195213.rs  parse_20241129195216.rs  (+81 more)
backend/nvms/.history/src/util/: mod_20241129200216.rs  mod_20241129200434.rs  nvms_20241129194755.rs  nvms_20241129200349.rs  nvms_20241129201428.rs  nvms_20241129201613.rs  nvms_20241129201616.rs  nvms_20241129201825.rs  nvms_20241129201911.rs  nvms_20241129201915.rs  nvms_20241129201923.rs  nvms_20241129201926.rs  nvms_20241129201934.rs  nvms_20241129201942.rs  nvms_20241129201947.rs  nvms_20241129201952.rs  nvms_20241129201955.rs  nvms_20241129201959.rs  nvms_20241129202014.rs  nvms_20241129202016.rs  nvms_20241129202024.rs  nvms_20241129202032.rs  nvms_20241129202046.rs  nvms_20241129202106.rs  nvms_20241129202110.rs  nvms_20241129202114.rs  nvms_20241129202116.rs
backend/nvms/Builder/: out.tt  package-lock.json  package.json
backend/nvms/Demonstrator/: go.mod  go.sum  main.go
backend/nvms/Getter/: go.mod  go.sum
backend/nvms/Parser/: go.mod  go.sum
backend/nvms/Provisioner/: go.mod  go.sum  main.go
backend/nvms/lib/: aws-stub.go  aws.go  awsutil.go  docker.go  llm.go  storage.go  tunnel.go
backend/nvms/lib/awspin/: index.go
backend/nvms/lib/awspin/ec2/: ec2_lib.go  iam.go  interface.go  secGLib.go  securityGroups.go  subnets.go
backend/nvms/lib/awspin/network/: alb.go
backend/nvms/lib/awspin/s3/: s3.go  s3_lib.go
backend/nvms/lib/providers/: index.go
backend/nvms/lib/providers-disabled/anthropic/: anthropic.go
backend/nvms/lib/providers-disabled/deepseek/: deepseek.go
backend/nvms/lib/providers-disabled/local/: local.go
backend/nvms/lib/providers-disabled/openai/: openai.go
backend/nvms/lib/providers/anthropic/: anthropic.go
backend/nvms/lib/providers/deepseek/: deepseek.go
backend/nvms/lib/providers/gemini/: gemini.go
backend/nvms/models/: types.go
backend/nvms/projectManager/: deploy.go  lib.go  parser.go  terminate.go
backend/nvms/src/util/: nvms.rs
crates/byteport-cli/: Cargo.toml
crates/byteport-cli/src/: main.rs  metrics.rs
crates/byteport-dag/: Cargo.toml
crates/byteport-dag/src/: artifact.rs  dag.rs  lib.rs  scheduler.rs  schema.rs  serialize.rs  topo.rs
crates/byteport-otel/: Cargo.toml
crates/byteport-otel/src/: config.rs  init.rs  lib.rs  metrics.rs  propagation.rs  tracing.rs
crates/byteport-registry-adapter/: Cargo.toml
crates/byteport-registry-adapter/src/: lib.rs
crates/byteport-transport/: Cargo.toml
crates/byteport-transport/src/: lib.rs
crates/byteport-transport/src/ports/: codec.rs  mod.rs  terminal_ui.rs  transport.rs  ui.rs
crates/pheno-dag/: Cargo.toml
crates/pheno-dag/src/: executor.rs  lib.rs  unit.rs
crates/phenotype-types/: Cargo.toml
crates/phenotype-types/src/: instance.rs  lib.rs  outcome.rs  path.rs
frontend/web/src-tauri/: Cargo.toml  tauri.conf.json
frontend/web/src-tauri/capabilities/: byteport-desktop.json
frontend/web/src-tauri/src/: lib.rs
(+4122 files in other folders)
