[package]
name = "byteport"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Developers"]
description = "Binary protocol and serialization framework"
license = "MIT"
repository = "https://github.com/KooshaPari/byteport"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
crc32fast = "1.3"
anyhow = { version = "1.0", optional = true }

# Transports (optional)
tokio-tungstenite = { version = "0.21", optional = true }
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }

# Compression (optional)
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.4", optional = true }

# Metrics (optional)
metrics = { version = "0.22", optional = true }

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"

[features]
default = ["tcp"]
tcp = []
udp = []
ws = ["tokio-tungstenite"]
quic = ["quinn", "rustls"]
compression = ["zstd", "lz4"]
metrics = ["dep:metrics"]
full = ["tcp", "udp", "ws", "quic", "compression", "metrics", "examples"]
examples = ["anyhow"]

[workspace]
