[package]
name = "nvms"
authors = ["Koosha Paridehpour <kooshapari@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
async-openai = "0.26.0"
aws-sdk-account = "1.50.0"
config = "=0.14.1"
octocrab = "0.42.1"
spin = "0.9.8"
spin-sdk = "3.1.0"
tokio = "1.41.1"

[workspace]
