[package]
name = "byteport-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Phenotype compute/infra — DAG execution and orchestration"
publish = false

[dependencies]
tracing = "0.1"

[dependencies.byteport-dag]
path = "../byteport-dag"

[dependencies.byteport-otel]
path = "../byteport-otel"

[dependencies.byteport-transport]
path = "../byteport-transport"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.opentelemetry]
version = "0.32"
features = [ "trace",]

[dev-dependencies.opentelemetry_sdk]
version = "0.32"
features = [ "trace", "testing",]
