[package]
name = "byteport-dag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DAG foundation: executor interface (sync, async-pool, worktree-pool) + topological sort and parallel-bucket scheduler for Phenotype compute/infra"
publish = false

[dependencies]
byteport-otel = { path = "../byteport-otel", optional = true }
futures = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["otel"]
otel = ["dep:byteport-otel", "dep:tracing"]
