[package]
name = "byteport-otel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BytePort OpenTelemetry instrumentation: metrics, tracing, and OTLP export"
publish = false

[dependencies]
tracing-opentelemetry = "0.33"

[features]
default = [ "semconv",]
semconv = [ "opentelemetry-semantic-conventions",]

[dependencies.opentelemetry]
version = "0.32"
features = [ "metrics", "trace",]

[dependencies.opentelemetry_sdk]
version = "0.32"
features = [ "metrics", "trace", "rt-tokio",]

[dependencies.opentelemetry-otlp]
version = "0.32"
features = [ "metrics", "trace", "grpc-tonic",]

[dependencies.opentelemetry-semantic-conventions]
version = "0.32"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "json", "env-filter",]

[dependencies.tokio]
version = "1"
features = [ "sync", "process",]

[dev-dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread",]
