[package]
name = "byteport-registry-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Adapter that invokes phenotype-registry grade.sh and parses JSON output"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
