[package]
name = "byteport-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
byteport-otel = { path = "../byteport-otel", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["otel"]
otel = ["dep:byteport-otel", "dep:tracing"]

