[package]
name = "pheno-dag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reusable DAG unit abstraction: DagUnit lifecycle, YAML executor, and automation gates for Phenotype epics"
publish = false

[dependencies]
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"

[dependencies.byteport-dag]
path = "../byteport-dag"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.uuid]
version = "1"
features = [ "v4",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]
