[package]
name = "phenotype-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Koosha Pari",]
description = "Shared type definitions across the Phenotype ecosystem — OCI instance records, path helpers, and canonical data models used by compute/infra agents."

[dependencies]
serde_json = "1"

[dependencies.serde]
version = "1"
features = [ "derive",]
