[[bin]]
name = "byteport"
path = "src/main.rs"

[[bench]]
name = "ipc"
harness = false

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you",]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "byteport"

[lib]
name = "app_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2.8.0"
thiserror = "2.0"

[dependencies.byteport-transport]
path = "../../../crates/byteport-transport"

[dependencies.clap]
version = "4.5"
features = [ "derive",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tauri]
version = "2.11.2"
features = []

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "fmt",]

[build-dependencies.tauri-build]
version = "2.5.6"
features = []

[package.metadata.cargo-machete]
ignored = [ "log", "serde", "serde_json",]
